# pyo3-noir

./: .gitignore  Cargo.toml  Dockerfile  README.md  pyproject.toml  test.py
.github/workflows/: publish_wheel.yml
noir/: __init__.py
noir/datatype/: __init__.py  noir_data.py  stream_item.py
noir/environment/: config_environment.py  noir_environment.py
noir/output/: opt_output.py  stream_output.py
noir/source/: __init__.py  csv_source.py  iterator_source.py
noir/stream/: __init__.py  expressions.py  noir_stream.py  opt_stream.py
py_noir/: __init__.py  noir.py  setup.py
py_noir/noir/: __init__.py
py_noir/noir/environment/: config_environment.py  noir_environment.py
py_noir/noir/source/: csv_source.py  iterator_source.py
py_noir/noir/stream/: noir_stream.py
py_noir/py_noir/environment/: __init__.py  config_environment.py  noir_environment.py
py_noir/py_noir/output/: __init__.py  stream_output.py
py_noir/py_noir/stream/: noir_stream.py
src/: lib.rs
src/datatype/: mod.rs  noir_data.rs  noir_type.rs  stream_item.rs
src/environment/: config.rs  environment.rs  mod.rs  noir_env.rs
src/source/: mod.rs  noir_source.rs  source.rs
src/stream/: expressions.rs  mod.rs  noir_stream.rs  opt_stream.rs  output.rs  stream.rs  stream_self.rs  utils.rs
test/: data.csv  optimized.py  prova_import.py  test.py
