[package]
name = "pyo3-noir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_noir"
crate-type = ["cdylib"]

[dependencies]
indexmap = "2.0.0"
noir = {git = "https://github.com/CanaliDavide/noir"}
once_cell = "1.18.0"
pyo3 = { version = "0.19", features = ["abi3-py38", "extension-module", "multiple-pymethods"] }
typemap_rev = "0.3.0"
