[package]
name = "pyo3-noir"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_noir"
crate-type = ["cdylib"]

[dependencies]
indexmap = "2.0.0"
noir = { path = "/home/canali/Tesi/noir/" }
once_cell = "1.18.0"
pprof =  { version = "0.12.1", features = ["flamegraph"] }
pyo3 = { version = "0.19", features = ["abi3-py38", "extension-module", "multiple-pymethods"] }
typemap_rev = "0.3.0"
