[package]
name = "pyo3-noir"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "noir"
crate-type = ["cdylib"]

[dependencies]
indexmap = "2.0.0"
noir-compute = { path = "../noir" }
once_cell = "1.18.0"
pprof =  { version = "0.12.1", features = ["flamegraph"] }
pyo3 = { version = "0.19", features = ["abi3-py37", "extension-module", "multiple-pymethods"] }
typemap_rev = "0.3.0"
